# karaoke-box

./: .gitattributes  .gitignore  AGENTS.md  README.md  package.json
.github/workflows/: windows-desktop.yml
backend/: desktop_entry.py  pyproject.toml
backend/app/: __init__.py  config.py  desktop.py  jobs.py  karaoke.py  karaoke_renderer.py  lyrics.py  main.py  processor.py  profiles.py  rights.py  runtime.py  youtube.py
backend/app/karaoke_assets/: PROVENANCE.md
backend/app/separators/: __init__.py  base.py  catalog.py  demucs.py  melband.py  model_cache.py  registry.py  worker.py
backend/app/separators/models/: PROVENANCE.md  vocals_mel_band_roformer.yaml
backend/tests/: test_api.py  test_desktop.py  test_karaoke.py  test_lyrics.py  test_melband_runtime.py  test_processor.py  test_separators.py  test_youtube.py
docs/: DEPLOYMENT.md  DESKTOP.md  KARAOKE_VIDEO.md  PLAN.md  REDESIGN_SPEC.md  SEPARATOR_SUBAGENT_PROMPTS.md  SEPARATOR_UPGRADE.md
packaging/windows/: KaraokeBox.iss  KaraokeBox.spec  README.md
web/: .env.example  index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  index.css  karaoke.component.test.tsx  karaoke.test.ts  karaoke.ts  main.tsx  previewAudio.ts
web/src/components/: Eq.tsx  KaraokeStudio.css  KaraokeStudio.tsx  icons.tsx
web/src/styles/: base.css  tokens.css
