[project]
name = "karaoke-box-api"
version = "0.1.0"
description = "Local audio separation API for Karaoke Box"
requires-python = ">=3.10,<3.13"
dependencies = [
  "beartype>=0.18.5,<0.19",
  "demucs>=4.0.1,<5",
  "einops>=0.8,<0.9",
  "fastapi>=0.116,<1",
  "numpy>=1.26,<2",
  "pillow>=11,<12",
  "pyyaml>=6.0,<7",
  "python-multipart>=0.0.20,<1",
  "rotary-embedding-torch>=0.6.5,<0.7",
  "uvicorn[standard]>=0.35,<1",
  "yt-dlp==2026.7.4",
]

[project.optional-dependencies]
desktop = [
  "platformdirs>=4.3,<5",
  "pywebview>=5.4,<6",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pyinstaller>=6.14,<7",
  "pytest>=8.4,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
